# diffusion2D

./: diffusion2d.py  pyproject.toml
src/: diffusion2d.py  output.py
